--- a/css/main.css
+++ b/css/main.css
@@ -49,8 +49,8 @@
 
 
 a {
-  color: #000;
-   overflow-wrap: break-word;
+    color: #000;
+    overflow-wrap: break-word;
     word-wrap: break-word;
     -ms-word-break: break-all;
     word-break: break-all;
@@ -61,7 +61,7 @@ a {
     -webkit-transition: all .3s ease-out;
     transition: all .3s ease-out;
     text-decoration: none;
-  border-bottom: 1px solid #d43900;
+    border-bottom: 1px solid #d43900;
 }
 
 #keep-on a:hover {
@@ -77,8 +77,9 @@ li {
   margin-bottom: 7px;
 }
 
-h2 {
+#keep-on h2 {
   border-bottom: 2px solid #424242;
+  margin-bottom: 25px;
 }
 
 #keep-on h3 {
