email this section

--- a/css/main.css
+++ b/css/main.css
@@ -113,6 +113,11 @@ li {
   background-color: #efefef;
 }
 
+.link-this {
+  font-size: .8em;
+  margin-bottom: 15px;
+}
+
 #footer {
   margin: 100px 0;
   display: block;
