--- a/css/main.css
+++ b/css/main.css
@@ -128,6 +128,13 @@ li {
   display: inline-block;
 }
 
+.focus-icon {
+  width: 200px;
+  height: 200px;
+  display: block;
+  margin: 40px auto 20px auto;
+}
+
 .img-link {
   text-decoration: none;
   border-bottom: none;
